--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "tslint": "^6.1.3",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0"
   }
