--- a/.env
+++ b/.env
@@ -1,3 +1,15 @@
+-----------------------------Puerto-------------------------------
 PORT = 8000
+-------------------------------------------------------------------
 
-SECRETORPRIVATEKEY = Esto3sM7Firm@DE1TokEn$$
+-----------------Conexion a la base de datos-----------------------
+PORTDATABASE = sxy4gkgwpj2wgncc
+USER = bv825f0nkr54vox5
+PASSWORD = x67i60hurmzpv5ck
+HOST = eanl4i1omny740jw.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DIALECT = mysql
+-------------------------------------------------------------------
+
+-------------------Firma del Token---------------------------------
+FIRMATOKENKEY = Esto3sM7Firm@DE1TokEn$$
+-------------------------------------------------------------------
