--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ PORT = 8000
 -------------------------------------------------------------------
 
 -----------------Conexion a la base de datos-----------------------
-PORTDATABASE = sxy4gkgwpj2wgncc
-USER = bv825f0nkr54vox5
-PASSWORD = x67i60hurmzpv5ck
-HOST = eanl4i1omny740jw.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+PORTDATABASE = slpkrpgf5l5l9gcj
+USER = h2yrfruccqgq8q0a
+PASSWORD = vi1hqb7y4ppcftqr
+HOST = en1ehf30yom7txe7.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DIALECT = mysql
 -------------------------------------------------------------------
 
