--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ PORT = 8000
 
 -----------------Conexion a la base de datos-----------------------
 PORTDATABASE = slpkrpgf5l5l9gcj
-USER = h2yrfruccqgq8q0a
-PASSWORD = vi1hqb7y4ppcftqr
-HOST = en1ehf30yom7txe7.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+USER = root
+PASSWORD = 1234
+HOST = 127.0.0.1
 DIALECT = mysql
 -------------------------------------------------------------------
 
