Apis put, post y get

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT = 8000
 -------------------------------------------------------------------
 
 -----------------Conexion a la base de datos-----------------------
-PORTDATABASE = slpkrpgf5l5l9gcj
+PORTDATABASE = aulavirtual_bd
 USER = root
 PASSWORD = 1234
 HOST = 127.0.0.1
